--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Redirect on Refresh</title>
+</head>
+<body>
+  <script>
+    window.onbeforeunload = function() {
+      window.location.href = "TiahM-CV.pdf";
+    };
+  </script>
+</body>
+</html>
