--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirect on Refresh</title>
+  <title>Tiaheranto Mandaniaina CV</title>
 </head>
 <body>
   <script>
-    window.onbeforeunload = function() {
-      window.location.href = "TiahM-CV.pdf";
+    window.onload = function() {
+      window.open("TiahM-CV.pdf", "_blank"); 
     };
   </script>
 </body>
