--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <title>Tiaheranto Mandaniaina CV</title>
 </head>
 <body>
-  <script>
-    window.onload = function() {
-      window.open("TiahM-CV.pdf", "_blank"); 
-    };
-  </script>
+    <a href="TiahM-CV.pdf" class="cv">CV</a>
 </body>
 </html>
