--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
   <title>Tiaheranto Mandaniaina CV</title>
+  <script>
+    // JavaScript to open the link when the page loads
+    window.onload = function() {
+      window.location.href = "TiahM-CV.pdf";
+    };
+  </script>
 </head>
 <body>
-    <a href="TiahM-CV.pdf" class="cv">CV</a>
 </body>
 </html>
