--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Tiaheranto Mandaniaina CV</title>
-  <script>
-    // JavaScript to open the link when the page loads
-    window.onload = function() {
-      window.location.href = "TiahM-CV.pdf";
-    };
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tiaheranto Mandaniaina personal website">
+    <meta name="keywords" content="Tiaheranto, TiahManda">
+    <meta name="author" content="TiahManda">
+    <meta http-equiv="refresh" content="3600">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Tiaheranto Mandaniaina</title>
 </head>
 <body>
+    <nav>
+        <div class="logo">
+            <img src="img/MyLogo-no-bg.png" alt="Logo" width="150px">
+        </div>
+        <ul id="menu-list">
+            <li class="menu"><a href="index.html">Home</a></li>
+            <li class="menu"><a href="#">Services</a></li>
+            <li class="menu"><a href="#">CV</a></li>
+            <li class="menu"><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="menu-icon">
+            <i class="bx bx-menu" id="menu-icon" onclick="toogleMenu()"></i>
+        </div>
+    </nav>
+
+    <div class="logo-tiahm">
+        <img src="img/Logo.png" alt="TiahM Logo" class="tiahm-logo-image">
+    </div>
+
+    <script>
+        let menuList = document.getElementById("menu-list");
+        menuList.style.maxHeight = "0px";
+
+        function toogleMenu() {
+            if (menuList.style.maxHeight == "0px") {
+                menuList.style.maxHeight = "300px"
+            } else {
+                menuList.style.maxHeight = "0px"
+            }
+        }
+    </script>
 </body>
-</html>
+</html>s
