--- a/cv.html
+++ b/cv.html
@@ -18,8 +18,8 @@
         </div>
         <ul id="menu-list">
             <li class="menu"><a href="index.html">Home</a></li>
-            <li class="menu"><a href="#">Services</a></li>
-            <li class="menu"><a href="#">CV</a></li>
+            <li class="menu"><a href="services.html">Services</a></li>
+            <li class="menu"><a href="cv.html">CV</a></li>
             <li class="menu"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu-icon">
@@ -29,7 +29,7 @@
     
     <div class="cv-list">
         <ul>
-            <li class="cv" onclick="window.location.href = 'TiahM-CV-En.pdf';">English</li>
+            <li class="cv" onclick="window.location.href = 'TiahM-CV.pdf';">English</li>
             <li class="cv" onclick="window.location.href = 'TiahM-CV-FR.pdf';">French</li>
         </ul>
     </div>
