--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <ul id="menu-list">
             <li class="menu"><a href="index.html">Home</a></li>
-            <li class="menu"><a href="#">Services</a></li>
-            <li class="menu"><a href="#">CV</a></li>
+            <li class="menu"><a href="services.html">Services</a></li>
+            <li class="menu"><a href="cv.html">CV</a></li>
             <li class="menu"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu-icon">
