--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
         </div>
         <ul id="menu-list">
             <li class="menu"><a href="index.html">Home</a></li>
-            <li class="menu"><a href="#">Services</a></li>
+            <li class="menu"><a href="services.html">Services</a></li>
             <li class="menu"><a href="cv.html">CV</a></li>
-            <li class="menu"><a href="#">Contact</a></li>
+            <li class="menu"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu-icon">
             <i class="bx bx-menu" id="menu-icon" onclick="toogleMenu()"></i>
