--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="img/MyLogo-no-bg.png" alt="Logo" width="150px">
         </div>
         <ul id="menu-list">
-            <li class="menu"><a href="index.html">Home</a></li>
+            <li class="menu active"><a href="#">Home</a></li>
             <li class="menu"><a href="services.html">Services</a></li>
             <li class="menu"><a href="cv.html">CV</a></li>
             <li class="menu"><a href="contact.html">Contact</a></li>
