--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
         <ul id="menu-list">
             <li class="menu"><a href="index.html">Home</a></li>
             <li class="menu"><a href="services.html">Services</a></li>
-            <li class="menu"><a href="cv.html">CV</a></li>
+            <li class="menu active"><a href="#">CV</a></li>
             <li class="menu"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu-icon">
