--- a/cv.html
+++ b/cv.html
@@ -33,5 +33,18 @@
             <li class="cv" onclick="window.location.href = 'TiahM-CV-FR.pdf';">French</li>
         </ul>
     </div>
+
+    <script>
+        let menuList = document.getElementById("menu-list");
+        menuList.style.maxHeight = "0px";
+
+        function toogleMenu() {
+            if (menuList.style.maxHeight == "0px") {
+                menuList.style.maxHeight = "300px"
+            } else {
+                menuList.style.maxHeight = "0px"
+            }
+        }
+    </script>
 </body>
 </html>
